[FIX] mrp_workorder: missing scrollbar tablet view
**Summary :**
When viewing a work order in tablet view, you mais miss information as
you're not able to scroll

**Before :**
If you have a **quality step** on the operation, you **cannot** scroll up
 and down meaning vital information may be missed.

**After :**
If you have a **quality step** on the operation, you **can** scroll.

**Additional Note :**
If there's a bunch of instructions, pictures... in the same time as a
document on the QCP, the div of the pdf/google slide shrink to 0px.
It explains why **.o_tablet_document** now has a min-height as well.

opw-3326557

closes odoo/enterprise#41737

--- a/mrp_workorder/static/src/components/tablet.scss
+++ b/mrp_workorder/static/src/components/tablet.scss
@@ -186,7 +186,7 @@ $o-wo-tablet-text: color-contrast($o-wo-tablet-bg, $body-color, #FFF);
         .o_tablet_instructions_content {
             flex-basis: 100%;
             flex-grow: 1;
-            overflow: hidden;
+            overflow: auto;
             display: flex;
             flex-flow: column;
             padding-left: 0;
@@ -200,7 +200,7 @@ $o-wo-tablet-text: color-contrast($o-wo-tablet-bg, $body-color, #FFF);
             }
             .o_tablet_document {
                 width: 100%;
-                height: 100%;
+                min-height: 100%;
                 overflow: hidden;
                 iframe {
                     border: none;
